[package]
name = "engine"
version = "0.1.0"
authors = ["dohnal <dohnal.adam@gmail.com>"]
description = "Sand simulation"
license = "MIT/Apache-2.0"
repository = "https://github.com/dohnala/SandSim"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
