[package]
name = "engine"
version = "0.1.0"
authors = ["dohnal <dohnal.adam@gmail.com>"]
description = "Sand simulation"
repository = "https://github.com/dohnala/SandSim"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-traits = "0.2"
wasm-bindgen = "0.2.71"
js-sys = "0.3.48"
web-sys = {version = "0.3.48", features = ['console']}
noise = "0.7.0"
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']